--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 
-<!--
-	Copyright 2014 Git.Training
---!>
 <head>
-	<title>Simple Title</title>
+	<title>Git Branch Demo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
