--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<title>Git Branch Demo</title>
+	<title>Git Branch Example DUDE</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
